# TMesh

./: CMakeLists.txt  README.md
include/: Cox.h  ImGui.h  Math.hpp  MyImGui.h  MyParam.h  SMath.hpp  TMeshOptimizer.h  TSkeleton.h  TSkeletonPolygonFace.h  TSkeletonTypes.h  TSkeletonTypes.inl  Tspline.h  TsplineCreator.h  Types.h
src/: Cox.cpp  MyImGui.cpp  MyImGui_Operators.cpp  MyParam.cpp  TMeshOptimizer.cpp  TSkeleton.cpp  TSkeletonPolygonFace.cpp  Tspline.cpp  TsplineCreator.cpp  Tspline_operators.cpp  Types.cpp  main.cpp
